# image-tiny-tauri

./: .yarnrc  CHANGELOG.md  LICENSE  README.md  index.html  package.json  vite.config.js  vite.config.ts
.github/workflows/: main.yml
public/: pngtiny-custom.wasm
src/: App.vue  index.d.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/css/: reset.css
