[package]
authors = ["you"]
build = "src/build.rs"
default-run = "ImageTiny"
description = "A Tauri App"
edition = "2018"
license = ""
name = "ImageTiny"
repository = ""
version = "0.1.3"

[build-dependencies]
tauri-build = {version = "=1.0.0-beta.4"}

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = {version = "=1.0.0-beta.8", features = ["api-all"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
